--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="Tag" href="mailto:ngthanhthao2206@gmail.com">
             <img class="dark" src="image/mail.png" alt="Email Logo">
             <img class="light" src="image/gmail.png" alt="Email Logo">
-            <div>Private Email</div>
+            <div>Email</div>
         </a>
         <a class="Tag" href="tel:0354222604">
             <img class="dark" src="image/call.png" alt="PhoneNumber Logo">
