--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div>Instagram</div>
         </a>
         <div id="Credit1">Digital Business Card</div>
-        <div id="Credit2"><a href="https://anlavn.github.io/Digital-Business-Card/">Make by AnLa</a></div>
+        <div id="Credit2"><a href="https://anlavn.github.io/Binh_An-Credit/">Make by AnLa</a></div>
     </div>
     <script>
         const body = document.querySelector('body');
