--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="InforCard">
         <img id="Avatar" src="image/THAO.JPG"/>
         <div id="Name">Nguyễn Thanh Thảo</div>
-        <div id="Description">Khi thật sự thích một ai đó, thì bạn sẽ không chia tay người đó dù bất kì lí do gì...</div>
+        <div id="Description">Learning at THPT Xuân Đỉnh</div>
         <a class="Tag" href="mailto:ngthanhthao2206@gmail.com">
             <img class="dark" src="image/mail.png" alt="Email Logo">
             <img class="light" src="image/gmail.png" alt="Email Logo">
