--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img class="light" src="image/messenger-color.png" alt="Messenger Logo">
             <div>Messenger</div>
         </a>
-        <a class="Tag" href="https://www.instagram.com/mihwan.th/">
+        <a class="Tag" href="https://www.instagram.com/callqypw/">
             <img class="dark" src="image/instagram.png" alt="Instagram Logo">
             <img class="light" src="image/instagram-color.png" alt="Instagram Logo">
             <div>Instagram</div>
